# pkg/corerp/api/v20220315privatepreview/zz_generated_models_serde.go
@@ -1981,6 +1981,45 @@ func (p *ProvidersAzure) UnmarshalJSON(data []byte) error {
 	return nil
 }
 
+// MarshalJSON implements the json.Marshaller interface for type Recipe.
+func (r Recipe) MarshalJSON() ([]byte, error) {
+	objectMap := make(map[string]interface{})
+	populate(objectMap, "linkType", r.LinkType)
+	populate(objectMap, "parameters", r.Parameters)
+	populate(objectMap, "recipeName", r.RecipeName)
+	populate(objectMap, "templatePath", r.TemplatePath)
+	return json.Marshal(objectMap)
+}
+
+// UnmarshalJSON implements the json.Unmarshaller interface for type Recipe.
+func (r *Recipe) UnmarshalJSON(data []byte) error {
+	var rawMsg map[string]json.RawMessage
+	if err := json.Unmarshal(data, &rawMsg); err != nil {
+		return fmt.Errorf("unmarshalling type %T: %v", r, err)
+	}
+	for key, val := range rawMsg {
+		var err error
+		switch key {
+		case "linkType":
+				err = unpopulate(val, "LinkType", &r.LinkType)
+				delete(rawMsg, key)
+		case "parameters":
+				err = unpopulate(val, "Parameters", &r.Parameters)
+				delete(rawMsg, key)
+		case "recipeName":
+				err = unpopulate(val, "RecipeName", &r.RecipeName)
+				delete(rawMsg, key)
+		case "templatePath":
+				err = unpopulate(val, "TemplatePath", &r.TemplatePath)
+				delete(rawMsg, key)
+		}
+		if err != nil {
+			return fmt.Errorf("unmarshalling type %T: %v", r, err)
+		}
+	}
+	return nil
+}
+
 // MarshalJSON implements the json.Marshaller interface for type RecipeMetadata.
 func (r RecipeMetadata) MarshalJSON() ([]byte, error) {
 	objectMap := make(map[string]interface{})
